@@ -5,6 +5,7 @@ SVN
 - Fixed files being overwriten even if user chose "no" in the overwrite dialog (when he didn't choose another path right away)
 - Fixed song length detection when importing midi files
 - Fixed note ordering bug that could potentially have caused songs to be messed up
+- Fixed copying and pasting from a song to another when both songs don't use the same beat resolution
 
 1.1.1
 - Added feature to see other tracks in background of current track (keyboard view only for now)
